# telegram-bot-factory

./: Dockerfile  README.md  __main__.py  bot_logging.py  config.py  config_bot.yaml  pyproject.toml  requirements.txt  server.py
bot/: __init__.py  client.py  custom_send.py  utils.py
bot/modules/: __init__.py  command.py  common.py  files.py  regexp.py
