[tool.poetry]
name = "telegram-bot-factory"
version = "0.1.0"
description = ""
authors = ["Igor Utkin <aemen95@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^20.6"
PyYAML = "^6.0.1"
requests = "^2.31.0"
aiohttp = "^3.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
